--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 * {
     font-size: 16px;
     font-family: "Oxygen", sans-serif;
@@ -78,4 +79,44 @@ body, html {
     position: relative;
     height: 0;
     visibility: hidden;
+}
+
+/* info alert */
+
+h3 {
+    font-family: Quicksand;
+    margin: 0;
+    padding: 0;
+}
+.alert {
+    width: 70%;
+    height: 70px;
+    opacity: 30%;
+    margin: 20px auto;
+    padding: 30px;
+    position: relative;
+    border-radius: 5px;
+    /* box-shadow: 0 0 15px 5px #ccc; */
+}
+.close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    opacity: 0.5;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 50%;
+    right: 15px;
+    top: 25px;
+    text-align: center;
+    font-size: 1.6em;
+    cursor: pointer;
+}
+.simple-alert {
+    background-color: #ebebeb;
+    border-left: 5px solid #6c6c6c;
+}
+.simple-alert .close {
+    border-color: #6c6c6c;
+    color: #6c6c6c;
 }
